- Included utility values - Made all variables editable - Uses GET params if available or defaults - Option to link/copy URL with params as set

--- a/index.html
+++ b/index.html
@@ -3,70 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Investment Calculator</title>
-    <style type="text/css">
-
-      .input {
-        margin-bottom: 40px;
-        border-top: solid 1px #000;
-      }
-
-      .input input {
-        border: solid 1px #000;
-        text-align: right;
-      }
-      .input input[disabled] {
-        border-color: #aaa;
-        background: #eee;
-        color: #aaa;
-      }
-
-      th,
-      td
-      {
-        text-align: left;
-      }
-      [class^=val] {
-        text-align: right;
-      }
-      th, td
-      {
-        padding-left: 20px;
-      }
-
-      tr *:first-child {
-        padding-left: 0;
-      }
-
-      .subhead td{
-        font-weight: bold;
-        padding-bottom: 5px;
-      }
-
-
-      .divider td {
-        font-size: 10px;
-      }
-      .divider + .divider td {
-        border-top: solid 1px #000;
-      }
-
-      tr.return td {
-        border-top: solid 1px blue;
-        border-bottom: solid 1px blue;
-      }
-
-      h3 {
-        margin-bottom: 1em;
-      }
-
-      h3 span {
-        display: block;
-        font-weight: normal;
-        font-size: 90%;
-      }
-
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="calc.css">
   </head>
   <body>
 
@@ -80,24 +17,22 @@
 
       <tr>
         <td class="label">Purchase price</td>
-        <td><input id="purchase-price" type="number" value="75000"></td>
+        <td><input id="purchase-price" type="number"></td>
       </tr>
 
-
       <tr>
-        <td class="label">Downpayment (25%)</td>
+        <td class="label">Downpayment %</td>
+        <td><input id="downpayment-rate" type="number"></td>
+      </tr>
+
+      <tr class="hidden">
+        <td class="label">Downpayment amount</td>
         <td><input id="downpayment" type="number" disabled="true"></td>
       </tr>
 
-      <tr>
+      <tr class="hidden">
         <td class="label">Loan amount</td>
         <td><input id="loan-amount" type="number" disabled="true"></td>
-      </tr>
-
-
-      <tr>
-        <td class="label">Taxable value</td>
-        <td><input id="taxval" type="number" value="33832"></td>
       </tr>
 
       <tr>
@@ -106,19 +41,78 @@
       </tr>
 
       <tr>
-        <td class="label">Annual property insurance</td>
-        <td><input  id="insurance" type="number" value="2000"></td>
+        <td class="label">Loan duration (years):</td>
+        <td><input id="loan-years" type="number" value="30"></td>
+      </tr>
+
+      <tr class="divider">
+        <td colspan="2">&nbsp;</td>
       </tr>
 
       <tr>
-        <td class="label">Monthly rent</td>
+        <td class="label">Taxable value</td>
+        <td><input id="taxval" type="number"></td>
+      </tr>
+
+      <tr>
+        <td class="label">Millage rate (<a href="https://treas-secure.state.mi.us/ptestimator/PTEstimator.asp" target="_blank">look up</a>)</td>
+        <td><input id="taxrate" type="number" step="any"></td>
+      </tr>
+
+      <tr class="divider">
+        <td colspan="2">&nbsp;</td>
+      </tr>
+
+      <tr>
+        <td class="label">Annual property insurance</td>
+        <td><input  id="insurance" type="number" value="1500"></td>
+      </tr>
+
+      <tr>
+        <td class="label">Annual water bill</td>
+        <td><input  id="water" type="number" value="400"></td>
+      </tr>
+
+      <tr>
+        <td class="label">Monthly trash bill</td>
+        <td><input  id="trash" type="number" value="25"></td>
+      </tr>
+
+      <tr class="divider">
+        <td colspan="2">&nbsp;</td>
+      </tr>
+
+
+      <!-- Contingency factors -->
+
+      <tr>
+        <td class="label">Maintenance factor %</td>
+        <td><input  id="maintenance-factor" type="number" step="any"></td>
+      </tr>
+
+      <tr>
+        <td class="label">Vacancy factor %</td>
+        <td><input  id="vacancy-factor" type="number" step="any"></td>
+      </tr>
+
+      <tr>
+        <td class="label">Collections factor %</td>
+        <td><input  id="collections-factor" type="number" step="any"></td>
+      </tr>
+
+
+      <tr class="divider">
+        <td colspan="2">&nbsp;</td>
+      </tr>
+
+
+      <tr>
+        <td class="label">Monthly rent (income)</td>
         <td><input  id="income-rent" type="number" value="1200"></td>
       </tr>
 
-      <tr>
-        <td class="label">Loan duration (years):</td>
-        <td><input id="loan-years" type="number" value="30" disabled="true"></td>
-      </tr>
+
+
 
     </table>
 
@@ -149,15 +143,22 @@
           <td class="notes"></td>
         </tr>
 
-        <tr class="property-insurance tally">
+        <tr class="property-tax tally">
+          <td class="label">Property tax</td>
+          <td class="val_annually"></td>
+          <td class="val_monthly"></td>
+          <td class="notes"></td>
+        </tr>
+
+        <tr class="insurance tally">
           <td class="label">Property insurance</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="property-tax tally">
-          <td class="label">Property tax</td>
+        <tr class="utilities tally">
+          <td class="label">Utilities</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
@@ -225,6 +226,14 @@
 
     </table>
 
+
+    <div id="settings">
+      <p>
+        <a id="link">Link to this calculation</a> //
+        <input id="url"> //
+        <a id="reset" href="./">Reset</a>
+      </p>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="calc.js"></script>
