Added optional Property Name field which updates page title so bookmarked calculation will include user-recognizable value

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
       </tr>
 
       <tr>
+        <td class="label">Property name or address</td>
+        <td><input id="property"></td>
+      </tr>
+
+      <tr class="divider">
+        <td colspan="4">&nbsp;</td>
+      </tr>
+
+      <tr class="divider">
+        <td colspan="4">&nbsp;</td>
+      </tr>
+
+      <tr>
         <td class="label">Purchase price</td>
         <td><input id="purchase-price" type="number"></td>
       </tr>
@@ -55,7 +68,7 @@
       </tr>
 
       <tr>
-        <td class="label">Millage rate (<a href="https://treas-secure.state.mi.us/ptestimator/PTEstimator.asp" target="_blank">look up</a>)</td>
+        <td class="label">Non-homestead <a href="https://treas-secure.state.mi.us/ptestimator/PTEstimator.asp" title="Look up" target="_blank">millage rate</a></td>
         <td><input id="taxrate" type="number" step="any"></td>
       </tr>
 
