Clicking on Outgoing Totals now toggles a breakdown between hard costs (mortgage, tax, insurance, utilities) and contingencies (maintenance, vacancy & collection factors).
Only indication that this functionality exists is the change of cursor when hovering Outgoing total. Intentionally hidden for now. Might change later.

--- a/index.html
+++ b/index.html
@@ -149,49 +149,49 @@
 
       <tbody>
 
-        <tr class="mortgage-payment tally">
+        <tr class="mortgage-payment tally hardcost">
           <td class="label">Mortgage payment</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="property-tax tally">
+        <tr class="property-tax tally hardcost">
           <td class="label">Property tax</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="insurance tally">
+        <tr class="insurance tally hardcost">
           <td class="label">Property insurance</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="utilities tally">
+        <tr class="utilities tally hardcost">
           <td class="label">Utilities</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="maintenance tally">
+        <tr class="maintenance tally contingency">
           <td class="label">Maintenance</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="vacancy-factor tally">
+        <tr class="vacancy-factor tally contingency">
           <td class="label">Vacancy factor</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
-        <tr class="collections-factor tally">
+        <tr class="collections-factor tally contingency">
           <td class="label">Collections factor</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
@@ -229,6 +229,20 @@
 
         <tr class="outgoing">
           <td class="label">Outgoing</td>
+          <td class="val_annually"></td>
+          <td class="val_monthly"></td>
+          <td class="notes"></td>
+        </tr>
+
+        <tr class="subtotal subtotal_hardcosts">
+          <td class="label">Hard costs</td>
+          <td class="val_annually"></td>
+          <td class="val_monthly"></td>
+          <td class="notes"></td>
+        </tr>
+
+        <tr class="subtotal subtotal_contingencies">
+          <td class="label">Contingencies</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
