Added tip (title) text to explain breakdown of Outgoing cost

--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
         </tr>
 
         <tr class="subtotal subtotal_hardcosts">
-          <td class="label">Hard costs</td>
+          <td class="label" title="Things you have to pay, like mortgage and tax">Hard costs</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
         </tr>
 
         <tr class="subtotal subtotal_contingencies">
-          <td class="label">Contingencies</td>
+          <td class="label" title="Things you'd be smart to save in a rainy day fund">Contingencies</td>
           <td class="val_annually"></td>
           <td class="val_monthly"></td>
           <td class="notes"></td>
